[package]
name = "blace"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
rusty-leveldb = {version="4.0.0" , features = ["asyncdb-tokio"]}
alloy-sol-types = "1.3"
hashbrown = "0.15.5"
keccak-hash = "0.11.0"
futures-lite = "2.6.0"
alloy = { version = "1.0.24", features = ["full"] }
jsonrpsee = {version = "0.26.0", features = ["server", "http-client", "ws-client", "macros"] }
bincode= {version = "2.0.1" , features = ["serde"]}
tokio={ version = "1.41.0", features = ["full"] }
anyhow="1.0.98"
serde="1.0.219"
serde_json="1.0.142"
tracing="0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
secp256k1 = { version = "0.31.1", features = ["recovery"] }
digest = "0.10.7"
bytes = "1.10.1"
sha2="0.10.8"
sha3 = "0.10.8"
dashmap = "6.1"
reqwest = { version = "0.12.23", features = ["json"] }
rand="0.9.2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }

[dev-dependencies]
